--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,22 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red_700">#FFD32F2F</color>
+
+    <color name="primaryColor">#ff5722</color>
+    <color name="primaryLightColor">#ff8a50</color>
+    <color name="primaryDarkColor">#c41c00</color>
+    <color name="secondaryColor">#424242</color>
+    <color name="secondaryLightColor">#6d6d6d</color>
+    <color name="secondaryDarkColor">#1b1b1b</color>
+    <color name="primaryTextColor">#000000</color>
+    <color name="secondaryTextColor">#ffffff</color>
+
+<!--    <color name="primaryColor">#37474f</color>-->
+<!--    <color name="primaryLightColor">#62727b</color>-->
+<!--    <color name="primaryDarkColor">#102027</color>-->
+<!--    <color name="secondaryColor">#90a4ae</color>-->
+<!--    <color name="secondaryLightColor">#c1d5e0</color>-->
+<!--    <color name="secondaryDarkColor">#62757f</color>-->
+<!--    <color name="primaryTextColor">#ffffff</color>-->
+<!--    <color name="secondaryTextColor">#000000</color>-->
 </resources>
